--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,40 @@
 alembic==1.0.11
+atomicwrites==1.3.0
+attrs==19.1.0
+bcrypt==3.1.7
+cffi==1.12.3
 Click==7.0
 entrypoints==0.3
 flake8==3.7.8
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.8
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
+importlib-metadata==0.18
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.0.13
 MarkupSafe==1.1.1
 mccabe==0.6.1
+more-itertools==7.1.0
 nose==1.3.7
+packaging==19.0
+pluggy==0.12.0
+psycopg2-binary==2.8.3
+py==1.8.0
 pycodestyle==2.5.0
+pycparser==2.19
 pyflakes==2.1.1
 PyJWT==1.7.1
+pyparsing==2.4.0
+pytest==5.0.1
 python-dateutil==2.8.0
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.5
+wcwidth==0.1.7
 Werkzeug==0.15.4
+zipp==0.5.2
