--- a/.ciecleci/config.yml
+++ b/.ciecleci/config.yml
@@ -6,6 +6,7 @@ jobs:
       - image: circleci/python:3.6.1
         environment: # environment variables for primary container
           DATABASE_URL: postgresql://root@localhost/flight_api?sslmode=disable
+          FLASK_APP: manage.py
       
       - image: circleci/postgres:9.4
         environment:
@@ -16,13 +17,13 @@ jobs:
 
     steps:
       - checkout
-
+      - run: mkdir test-reports
       # Download and cache dependencies
       - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "requirements.txt" }}
+          keys: 
+            - deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
             # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+            - deps1-
 
       - run:
           name: install dependencies
@@ -34,7 +35,7 @@ jobs:
       - save_cache:
           paths:
             - ./env
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
 
       # run tests
       - run:
@@ -46,3 +47,5 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+      - store_test_results:
+          path: test-reports/
