--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
         environment: # environment variables for primary container
           DATABASE_URL: postgresql://root@localhost/flight_api?sslmode=disable
           FLASK_APP: manage.py
+          APP_SETTINGS: testing
       
       - image: circleci/postgres:9.4
         environment:
