ft:tests fix db url

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       # version
       - image: circleci/python:3.6.1
         environment: # environment variables for primary container
-          DATABASE_URL: postgresql://root@localhost/flight_api?sslmode=disable
+          TEST_DB_URL: postgresql://root@localhost/flight_api?sslmode=disable
           FLASK_APP: manage.py
           APP_SETTINGS: testing
       
