--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ alembic==1.0.11
 atomicwrites==1.3.0
 attrs==19.1.0
 bcrypt==3.1.7
+certifi==2019.6.16
 cffi==1.12.3
 Click==7.0
+cloudinary==1.16.0
 entrypoints==0.3
 flake8==3.7.8
 Flask==1.1.1
@@ -19,6 +21,7 @@ Jinja2==2.10.1
 Mako==1.0.13
 MarkupSafe==1.1.1
 mccabe==0.6.1
+mock==3.0.5
 more-itertools==7.1.0
 nose==1.3.7
 packaging==19.0
@@ -35,6 +38,7 @@ python-dateutil==2.8.0
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.5
+urllib3==1.25.3
 wcwidth==0.1.7
 Werkzeug==0.15.4
 zipp==0.5.2
