ft:sendmail - add mail functionality

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,4 +52,4 @@ jobs:
           destination: test-reports
       - store_test_results:
           path: test-reports/
-      - run: coveralls
+      - run: coverage run -m pytest -v
