--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ pyflakes==2.1.1
 PyJWT==1.7.1
 pyparsing==2.4.0
 pytest==5.0.1
+pytest-cov==2.7.1
 python-dateutil==2.8.0
 python-editor==1.0.4
 pytz==2019.1
