--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.0.11
+APScheduler==3.6.1
 atomicwrites==1.3.0
 attrs==19.1.0
 bcrypt==3.1.7
@@ -49,6 +50,7 @@ pytz==2019.1
 requests==2.22.0
 six==1.12.0
 SQLAlchemy==1.3.5
+tzlocal==2.0.0
 urllib3==1.25.3
 wcwidth==0.1.7
 Werkzeug==0.15.4
