--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ more-itertools==7.1.0
 nose==1.3.7
 packaging==19.0
 pluggy==0.12.0
+psycopg2==2.7.5
 psycopg2-binary==2.8.3
 py==1.8.0
 pycodestyle==2.5.0
