--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,13 @@ jobs:
       # version
       - image: circleci/python:3.6.1
         environment: # environment variables for primary container
-          TEST_DB_URL: postgresql://soc:soc@database:5432/test-db
+          TEST_DB_URL: postgresql://root:soc@database:5432/test-db
           FLASK_APP: manage.py
           APP_SETTINGS: testing
       
       - image: circleci/postgres:9.4
         environment:
-          POSTGRES_USER: soc
+          POSTGRES_USER: root
           POSTGRES_PASSWORD: soc
           POSTGRES_DB: test_db
 
