--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
         environment:
           POSTGRES_USER: root
           POSTGRES_DB: flight_api
-          PGHOST: 127.0.0.1
+          PGHOST: localhost
 
     working_directory: ~/Flight-Booking-API
 
