--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           FLASK_APP: manage.py
           APP_SETTINGS: testing
           PGHOST: localhost
+          PGUSER: root
       
       - image: circleci/postgres:9.4
         environment:
