--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,16 +7,16 @@ jobs:
       # version
       - image: circleci/python:3.6.1
         environment: # environment variables for primary container
-          TEST_DB_URL: postgresql://postgres@localhost/flight_api?sslmode=disable
+          TEST_DB_URL: postgresql://circleci@localhost/circleci_test?sslmode=disable
           FLASK_APP: manage.py
           APP_SETTINGS: testing
           PGHOST: localhost
-          PGUSER: postgres
+          PGUSER: circleci
       
       - image: circleci/postgres:9.4
         environment:
-          POSTGRES_USER: postgres
-          POSTGRES_DB: flight_api
+          POSTGRES_USER: circleci
+          POSTGRES_DB: circleci_test
 
     working_directory: ~/Flight-Booking-API
 
